update invoice